# message-dispatcher

./: CMakeLists.txt  README.md
project/: message-dispatcher.sln  message-dispatcher.vcxproj  message-dispatcher.vcxproj.filters
samples/: main.cpp
source/: function_traits.h  message_data.h  message_dispatcher.cpp  message_dispatcher.h  message_token.cpp  message_token.h  type_info.h
